# job_hunt_manager

./: .gitignore  CLAUDE.md  README.md  TODO.md  alembic.ini  main.py  pyproject.toml
backend/: app.py  config.py  database.py
backend/models/: application.py  application_profile.py  credential.py  employer_answer.py  job.py  profile.py  resume.py  scan.py
backend/routers/: application_profile.py  applications.py  auth_google.py  autofill.py  credentials.py  employer_answer.py  jobs.py  profile.py  resume.py  resume_builder.py  scan.py
backend/schemas/: application.py  application_profile.py  credential.py  employer_answer.py  job.py  profile.py  resume.py  resume_builder.py  scan.py
backend/scrapers/: base.py  google_jobs.py  greenhouse.py  lever.py  linkedin.py  registry.py
backend/services/: crypto.py  matching.py  resume_builder.py  scan_orchestrator.py  sheets.py  sheets_worker.py  storage.py
browser_extension/: README.md  background.js  content.js  content.test.js  jest.setup.js  manifest.json  package-lock.json  package.json  popup.html  popup.js
docs/: plan-feature-1.md
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BulkAddCompaniesModal.tsx
migrations/: env.py
migrations/versions/: 0d56b4145e6c_add_resumes_table.py  40671a1b36d3_add_application_profile_table.py  84b652127e81_add_employer_answers_table.py  a3f7c8d2e1b4_add_applications_table.py  b07e9949c450_initial_schema.py  c1b54e9173c2_add_country_and_eeoc_ethnicity_to_.py  f95dca27f569_add_autofill_profile_fields.py
(+6 files in other folders)
